gitops/manifests/Archive/changedetectionio/install.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  namespace: changedetection
  labels:
    io.kompose.service: changedetection
  name: changedetection
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: changedetection
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: changedetection
        app.kubernetes.io/name: changedetection
    spec:
      containers:
        - env:
            - name: BASE_URL
              value: https://changedetection.local.timmybtech.com/
            - name: PLAYWRIGHT_DRIVER_URL
              value: wss://playwright.local.timmybtech.com/?stealth=1&--disable-web-security=true
          image: ghcr.io/dgtlmoon/changedetection.io:0.48.06
          name: changedetection
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /datastore
              name: changedetection-data
      hostname: changedetection
      restartPolicy: Always
      volumes:
        - name: changedetection-data
          persistentVolumeClaim:
            claimName: changedetection-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  namespace: changedetection
  labels:
    io.kompose.service: changedetection
  name: changedetection
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: changedetection
status:
  loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection-ingress
  namespace: changedetection
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`changedetection.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: changedetection
          port: 5000
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
  namespace: changedetection
  creationTimestamp: null
  labels:
    io.kompose.service: playwright-chrome
  name: playwright-chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: playwright-chrome
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/changedetectionio-default: "true"
        io.kompose.service: playwright-chrome
        app.kubernetes.io/name: playwright-chrome
    spec:
      containers:
        - env:
            - name: CHROME_REFRESH_TIME
              value: "600000"
            - name: CONNECTION_TIMEOUT
              value: "300000"
            - name: DEFAULT_BLOCK_ADS
              value: "true"
            - name: DEFAULT_STEALTH
              value: "true"
            - name: ENABLE_DEBUGGER
              value: "false"
            - name: MAX_CONCURRENT_SESSIONS
              value: "10"
            - name: PREBOOT_CHROME
              value: "true"
            - name: SCREEN_DEPTH
              value: "16"
            - name: SCREEN_HEIGHT
              value: "1024"
            - name: SCREEN_WIDTH
              value: "1920"
          image: browserless/chrome:latest
          name: playwright-chrome
          ports:
            - containerPort: 3000
          resources: {}
      hostname: playwright-chrome
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  namespace: changedetection
  labels:
    io.kompose.service: playwright-chrome
  name: playwright-chrome
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: playwright-chrome
status:
  loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: playwright-ingress
  namespace: changedetection
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`playwright.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: playwright-chrome
          port: 3000
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
